8132675: VBox.setVgrow and HBox.setHgrow corrupt following controls when window resized

Reviewed-by: ghb, mbilla, kcr