modules/javafx.web/src/main/java/com/sun/javafx/webkit/drt/DumpRenderTree.java
@@ -124,32 +124,10 @@ public final class DumpRenderTree {
         }
 
         @Override
+        protected void getScrollBarPartRect(long id, int part, int rect[]) {}
+
+        @Override
         public void paint(WCGraphicsContext g, Ref sbRef, int x, int y, int pressedPart, int hoveredPart) {
-        }
-
-        @Override
-        protected int hitTest(int w, int h, int orientation, int value, int visibleSize, int totalSize, int x, int y) {
-            return 0;
-        }
-
-        @Override
-        protected int getThumbPosition(int w, int h, int orientation, int value, int visibleSize, int totalSize) {
-            return 0;
-        }
-
-        @Override
-        protected int getThumbLength(int w, int h, int orientation, int value, int visibleSize, int totalSize) {
-            return 0;
-        }
-
-        @Override
-        protected int getTrackPosition(int w, int h, int orientation) {
-            return 0;
-        }
-
-        @Override
-        protected int getTrackLength(int w, int h, int orientation) {
-            return 0;
         }
 
         @Override
